service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  labels:
    app: frontend-v2
spec:
  type: LoadBalancer
  externalIPs:
  - 91.99.219.182
  selector:
    app: frontend-v2
  ports:
  - port: 9002
    targetPort: 80
    name: http
    protocol: TCP
